<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Tasks -->
    <string name="task_draft">Draft</string>
    <string name="task_ready_to_publish">Ready to publish</string>
    <string name="task_published">Published</string>

    <!-- Task -->
    <string name="test_status">Status</string>
    <string name="button_admin_test_add_task">+ New task</string>
    <string name="title_admin_test_add_task">Tasks</string>
    <string name="button_admin_task_ready_to_publish">Ready to publish</string>
    <string name="button_admin_task_publish">Publish</string>

    <!-- Task edit -->
    <string name="message_admin_task_edit_hint">To mark block as a redundant, select checkbox. To link such block to the valid press “link” icon.</string>
    <string name="button_admin_task_edit_add_block">+ Add new</string>
    <string name="button_admin_task_edit_save_changes">Save changes</string>
    <string name="hint_admin_task_name">Enter task text</string>
    <string name="hint_admin_task_edit_block">Enter block text</string>
    <string name="button_task_edit_drag_block">Reorder block</string>
    <string name="button_admin_task_edit_link">Link block</string>
    <string name="button_admin_task_edit_remove_block">Remove block</string>

</resources>