<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/bg_admin_block_editable"
    android:gravity="center_vertical">

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_remove_block"
        android:scaleType="fitCenter"
        android:contentDescription="@string/button_admin_task_edit_remove_block" />

    <EditText
        style="@style/InputUnderline"
        android:id="@+id/textBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginVertical="8dp"
        android:inputType="text|textMultiLine"
        android:maxLines="6"
        android:maxLength="1024"
        tools:text="Some block with some name 2" />

    <FrameLayout
        android:id="@+id/layoutBlockDisabled"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.flaringapp.testingsimulator.core.presentation.views.bettercheckbox.BetterCheckBox
            android:id="@+id/checkboxBlockDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:duplicateParentState="true"
            android:minWidth="0dp"
            android:gravity="center" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/buttonLink"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/selector_admin_block_link"
        android:scaleType="fitCenter"
        android:contentDescription="@string/button_admin_task_edit_link" />

    <ImageView
        android:id="@+id/buttonDrag"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:src="@drawable/ic_drag_indicator"
        android:scaleType="fitCenter"
        android:contentDescription="@string/button_task_edit_drag_block" />

</LinearLayout>