<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        tools:text="Test 1" />

    <View
        android:id="@+id/header_separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_separator_padded"
        android:layout_marginTop="8dp" />

    <TextView
        style="@style/Text.Hint"
        android:id="@+id/hint_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/message_admin_task_edit_hint" />

    <Button
        style="@style/Button.Outline"
        android:id="@+id/add_block_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_stroke_dashed"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/button_admin_task_edit_add_block" />

    <FrameLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_blocks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="-4dp"
            android:clipToPadding="false"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:orientation="vertical"
            tools:itemCount="6"
            tools:listitem="@layout/view_holder_admin_task_edit_block" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <Button
        style="@style/Button"
        android:id="@+id/save_changes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        tools:text="@string/button_admin_task_edit_save_changes" />

</LinearLayout>